<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtDateAlarmActivateGeof"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/hora_de_alarma_verficiacion_configuracion"/>

    <Button
        android:id="@+id/cmdTimeAlarmForCkecks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horas_minutos"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textSize="20sp"
        android:text="@string/hora_proxima_alarma_verficiacion_configuracion">
    </TextView>
    <TextView
        android:id="@+id/txtTimeNextAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:textSize="20sp"
        />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/cmdSaveConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_guardar_geofences"
            android:layout_marginTop="50dp"
            android:textSize="20sp" />

        <!-- Espaciador para empujar el siguiente elemento a la derecha -->
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <Button
            android:id="@+id/cmdCancelConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_cancelar_geofences"
            android:layout_marginTop="50dp"
            android:textSize="20sp" />

    </TableRow>

</LinearLayout>