<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/design_default_color_primary_dark"
        android:text="@string/contactos_del_tel_fono"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/txtFindContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buscar_contacto"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:drawableStart="@android:drawable/ic_menu_search"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPhoneContacts"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/design_default_color_primary_variant"
        android:text="@string/contactos_guardados_en_la_base_de_datos"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSavedContacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
