<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/properties_geofence"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ui.view.activities.common.PropertiesGeofenceActivity">

    <!-- Título del GroupBox -->
    <TextView
        android:id="@+id/groupbox_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/propiedades"
        android:textColor="#388E3C"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Grupo: Propiedades -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/group_round_box">

        <!-- Fila 1: Evento -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/txtEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:padding="0dp"
            android:text="@string/evento"
            android:textColor="@color/black"
            android:textSize="20sp" />


        </TableRow>
        <!-- Fila 2: Prioridad -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp">

            <Spinner
                android:id="@+id/spEvents"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="3"
                android:background="@drawable/sp_border"
                android:contentDescription="@string/evento"
                android:padding="5dp"
                android:popupBackground="@color/black" />

        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtPriority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:text="@string/prioridad"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/spPriority"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:background="@drawable/sp_border"
                android:contentDescription="@string/prioridad"
                android:padding="8dp"
                android:popupBackground="@color/black" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:text="@string/tiempo_de_permanencia"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>
        <!-- Fila 3: Tiempo de permanencia -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/txtDwellTime"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="number"
                android:enabled="false"
                android:padding="3dp"
                android:background="@drawable/editext_disabled"
                android:textColor="@color/white"
                android:textColorHint="@color/black"/>
        </TableRow>

        <!-- Fila 4: Zona segura (checkbox alineado a la derecha) -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp">


        </TableRow>
    </TableLayout>

    <!-- Título del segundo GroupBox -->
    <TextView
        android:id="@+id/groupbox_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:text="@string/datos_de_zona_segura"
        android:textColor="#388E3C"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Grupo: Horario zona segura -->
    <TableLayout
        android:id="@+id/groupSecurityZone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/group_round_box">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

        <CheckBox
            android:id="@+id/chkSecurityZone"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/zona_segura"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:buttonTint="@android:color/black"
            android:layoutDirection="rtl"/>

        <!-- Fila de separación -->
        <TableRow
            android:id="@+id/tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        </TableRow>
        <!-- Fila: Labels Min/Max -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/lblMinHour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:text="@string/Hour_min_secure_zone"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblMaxHour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:text="@string/Hour_max_secure_zone"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <!-- Fila: Valores Min/Max (campos visuales) -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp">

            <TextView
                android:id="@+id/txtMinHourSecureZone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/editext_enabled"
                android:gravity="center_vertical|start"
                android:overScrollMode="always"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtMaxHourSecureZone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/editext_enabled"
                android:gravity="center_vertical|start"
                android:maxLines="1"
                android:overScrollMode="always"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <!-- Grupo: Descripción -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/group_round_box">

        <!-- Separador -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <!-- Fila: Label descripción -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/descripcion_de_area_geofence"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <!-- Fila: Campo descripción -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/editext_enabled"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:minLines="1"
                android:maxLines="2"
                android:overScrollMode="always"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:textColor="@color/black"
                android:contentDescription="@string/descripcion_de_area_geofence"
                tools:ignore="Autofill" />
        </TableRow>
    </TableLayout>

    <!-- Botonera -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/cmdSaveGeofences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmd_guardar_geofences"
                android:textSize="20sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cmdCancelGeofence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmd_cancelar_geofences"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>
